kubernetes/jenkins/without-operator/jenkins-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    name: jenkins

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: jenkins-master-pvc
#   namespace: jenkins
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 10Gi
#   storageClassName: standard

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-master
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: jenkins-master
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
        # volumeMounts:
        # - name: jenkins-home
        #   mountPath: /var/jenkins_home
      # volumes:
      # - name: jenkins-home
      #   persistentVolumeClaim:
      #     claimName: jenkins-master-pvc
