kubernetes/jenkins/without-operator/jenkins-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: jenkins-operator
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=DEV,Cost Center=1000,Owner=Sam Thompson
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: jenkins-operator-http-jenkins
              servicePort: 8080
